; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns3/extr_hns3_ethtool.c_hns3_lb_clear_tx_ring.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns3/extr_hns3_ethtool.c_hns3_lb_clear_tx_ring.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hns3_nic_priv = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.hns3_enet_ring* }
%struct.hns3_enet_ring = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hns3_nic_priv*, i64, i64, i64)* @hns3_lb_clear_tx_ring to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hns3_lb_clear_tx_ring(%struct.hns3_nic_priv* %0, i64 %1, i64 %2, i64 %3) #0 {
  %5 = alloca %struct.hns3_nic_priv*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.hns3_enet_ring*, align 8
  store %struct.hns3_nic_priv* %0, %struct.hns3_nic_priv** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %11 = load i64, i64* %6, align 8
  store i64 %11, i64* %9, align 8
  br label %12

12:                                               ; preds = %26, %4
  %13 = load i64, i64* %9, align 8
  %14 = load i64, i64* %7, align 8
  %15 = icmp ule i64 %13, %14
  br i1 %15, label %16, label %29

16:                                               ; preds = %12
  %17 = load %struct.hns3_nic_priv*, %struct.hns3_nic_priv** %5, align 8
  %18 = getelementptr inbounds %struct.hns3_nic_priv, %struct.hns3_nic_priv* %17, i32 0, i32 0
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = load i64, i64* %9, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i64 %20
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load %struct.hns3_enet_ring*, %struct.hns3_enet_ring** %22, align 8
  store %struct.hns3_enet_ring* %23, %struct.hns3_enet_ring** %10, align 8
  %24 = load %struct.hns3_enet_ring*, %struct.hns3_enet_ring** %10, align 8
  %25 = call i32 @hns3_clean_tx_ring(%struct.hns3_enet_ring* %24)
  br label %26

26:                                               ; preds = %16
  %27 = load i64, i64* %9, align 8
  %28 = add i64 %27, 1
  store i64 %28, i64* %9, align 8
  br label %12

29:                                               ; preds = %12
  ret void
}

declare dso_local i32 @hns3_clean_tx_ring(%struct.hns3_enet_ring*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
